--- a/config/sync/core.entity_form_display.node.dot_on_map.default.yml
+++ b/config/sync/core.entity_form_display.node.dot_on_map.default.yml
@@ -49,7 +49,7 @@ third_party_settings:
       label: Kategorisering
       region: content
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: tabs
       format_settings:
         classes: ''
@@ -234,15 +234,15 @@ content:
     settings:
       rows: 9
       summary_rows: 3
-      placeholder: ''
-      show_summary: true
+      placeholder: 'Fortæl kort om, hvem I er – og beskriv jeres tilbud til skoler.'
+      show_summary: false
     third_party_settings:
       allowed_formats:
         hide_help: '0'
         hide_guidelines: '0'
   created:
     type: datetime_timestamp
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -252,8 +252,11 @@ content:
     region: content
     settings:
       rows: 5
-      placeholder: ''
-    third_party_settings: {  }
+      placeholder: 'Skriv institutionens eller personens kontaktdata, som vi må lægge ud på sitet: Navn, adresse, e-mail og evt. også telefonnummer.'
+    third_party_settings:
+      allowed_formats:
+        hide_help: '0'
+        hide_guidelines: '0'
   field_files:
     type: file_generic
     weight: 15
@@ -286,7 +289,7 @@ content:
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 8
+    weight: 9
     region: content
     settings:
       sidebar: true
@@ -300,13 +303,13 @@ content:
     third_party_settings: {  }
   field_section_bg_graphics:
     type: options_select
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   field_section_bg_graphics_pos:
     type: options_select
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -316,7 +319,7 @@ content:
     region: content
     settings:
       rows: 5
-      placeholder: ''
+      placeholder: 'Beskriv dit tilbud kort (max 100 anslag). Resume vises i pop up vindue, når man klikker på din prik på kortet.'
     third_party_settings: {  }
   lat:
     type: string_textfield
@@ -336,13 +339,13 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -354,7 +357,7 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 13
+    weight: 14
     region: content
     settings:
       display_label: true
@@ -365,11 +368,11 @@ content:
     region: content
     settings:
       size: 60
-      placeholder: ''
+      placeholder: 'Skriv institutionens navn eller personens navn.'
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 10
+    weight: 11
     region: content
     settings:
       match_operator: CONTAINS
@@ -378,7 +381,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
