--- a/config/sync/field.field.node.dot_on_map.field_files.yml
+++ b/config/sync/field.field.node.dot_on_map.field_files.yml
@@ -12,7 +12,7 @@ field_name: field_files
 entity_type: node
 bundle: dot_on_map
 label: Filer
-description: ''
+description: 'Hvis du vil knytte dokumenter eller flere fotos til dit opslag, så kan du lægge op til fem filer ved her på samlet max 5 MB.'
 required: false
 translatable: false
 default_value: {  }
