--- a/config/sync/field.field.node.dot_on_map.field_list_media.yml
+++ b/config/sync/field.field.node.dot_on_map.field_list_media.yml
@@ -11,7 +11,7 @@ field_name: field_list_media
 entity_type: node
 bundle: dot_on_map
 label: 'Liste media'
-description: 'Et lille billede, der vises på interne søgeresultater og andre lister.'
+description: 'Brug knappen og hent et godt foto på din computer. Billedet bliver vist i toppen af din artikel – og på søgninger. Det skal være i bredformat og mindst 900 pixels bredt. (Ideelt er 900 x 506 pixels.) Du kan kun vælge ét foto.'
 required: false
 translatable: true
 default_value: {  }
