--- a/config/sync/field.storage.node.field_class.yml
+++ b/config/sync/field.storage.node.field_class.yml
@@ -3,8 +3,12 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
     - taxonomy
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: node.field_class
 field_name: field_class
 entity_type: node
