--- a/config/sync/core.entity_view_display.node.link_article.full.yml
+++ b/config/sync/core.entity_view_display.node.link_article.full.yml
@@ -19,7 +19,6 @@ dependencies:
     - node.type.link_article
     - responsive_image.styles.3_column_flex_height
   module:
-    - image
     - layout_builder
     - link
     - responsive_image
@@ -50,7 +49,7 @@ content:
     region: content
   field_external_link:
     type: link
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
@@ -61,13 +60,11 @@ content:
     weight: 3
     region: content
   field_external_link_logo:
-    type: image
-    label: above
+    type: responsive_image
+    label: hidden
     settings:
+      responsive_image_style: small
       image_link: ''
-      image_style: ''
-      image_loading:
-        attribute: lazy
     third_party_settings: {  }
     weight: 4
     region: content
