--- a/config/sync/core.entity_view_display.node.link_article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.link_article.teaser.yml
@@ -53,6 +53,17 @@ content:
     third_party_settings: {  }
     weight: 4
     region: content
+  field_external_link_logo:
+    type: image
+    label: hidden
+    settings:
+      image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
+    third_party_settings: {  }
+    weight: 5
+    region: content
   field_list_media:
     type: entity_reference_entity_view
     label: hidden
@@ -77,7 +88,6 @@ hidden:
   body: true
   field_article_months: true
   field_class: true
-  field_external_link_logo: true
   field_location: true
   field_season: true
   field_subject: true
