--- a/config/sync/entity_overview.overview.node_article.yml
+++ b/config/sync/entity_overview.overview.node_article.yml
@@ -1,20 +1,25 @@
 uuid: dc546d23-0531-4810-95ed-14a7b2dffaec
 langcode: da
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - node.type.article
+    - node.type.link_article
+  module:
+    - node
 id: node_article
 label: Artikel
 entity_bundles:
   node:
     - article
+    - link_article
 fields:
   owner: entity_autocomplete
-  text: textfield
   field_article_type: checkboxes
   field_class: checkboxes
   field_location: checkboxes
   field_season: checkboxes
   field_subject: checkboxes
 engine_id: relewise
-sort_field: field_list_date
+sort_field: created
 show_total: results
