--- a/config/sync/field.field.node.link_article.field_article_type.yml
+++ b/config/sync/field.field.node.link_article.field_article_type.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_article_type
     - node.type.link_article
+    - taxonomy.vocabulary.article_types
 id: node.link_article.field_article_type
 field_name: field_article_type
 entity_type: node
@@ -17,5 +18,12 @@ default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
-  handler_settings: {  }
+  handler_settings:
+    target_bundles:
+      article_types: article_types
+    sort:
+      field: name
+      direction: asc
+    auto_create: false
+    auto_create_bundle: ''
 field_type: entity_reference
