--- a/config/sync/core.entity_view_display.node.link_article.list.yml
+++ b/config/sync/core.entity_view_display.node.link_article.list.yml
@@ -17,10 +17,12 @@ dependencies:
     - field.field.node.link_article.field_season
     - field.field.node.link_article.field_subject
     - node.type.link_article
+    - responsive_image.styles.list_view
   module:
     - image
     - layout_builder
-    - text
+    - link
+    - responsive_image
     - user
 third_party_settings:
   layout_builder:
@@ -31,51 +33,68 @@ targetEntityType: node
 bundle: link_article
 mode: list
 content:
-  body:
-    type: text_default
+  field_article_type:
+    type: entity_reference_label
     label: hidden
-    settings: {  }
+    settings:
+      link: true
     third_party_settings: {  }
-    weight: 101
+    weight: 3
     region: content
   field_description:
     type: basic_string
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 102
+    weight: 0
     region: content
-  field_list_media_anonymous:
+  field_external_link:
+    type: link
+    label: hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    weight: 4
+    region: content
+  field_external_link_logo:
     type: image
-    label: above
+    label: hidden
     settings:
       image_link: ''
       image_style: ''
       image_loading:
         attribute: lazy
     third_party_settings: {  }
-    weight: 103
+    weight: 5
     region: content
-  field_subject:
-    type: entity_reference_label
-    label: above
+  field_list_media:
+    type: entity_reference_entity_view
+    label: hidden
     settings:
-      link: true
+      view_mode: list
+      link: false
     third_party_settings: {  }
-    weight: 104
+    weight: 2
     region: content
-  links:
-    settings: {  }
+  field_list_media_anonymous:
+    type: responsive_image
+    label: hidden
+    settings:
+      responsive_image_style: list_view
+      image_link: ''
     third_party_settings: {  }
-    weight: 100
+    weight: 1
     region: content
 hidden:
+  body: true
   field_article_months: true
-  field_article_type: true
   field_class: true
-  field_external_link: true
-  field_external_link_logo: true
-  field_list_media: true
   field_location: true
   field_season: true
+  field_subject: true
   langcode: true
+  links: true
