--- a/config/sync/core.entity_view_display.node.link_article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.link_article.teaser.yml
@@ -17,24 +17,40 @@ dependencies:
     - field.field.node.link_article.field_season
     - field.field.node.link_article.field_subject
     - node.type.link_article
-    - responsive_image.styles.list_view
   module:
     - image
     - link
-    - responsive_image
     - user
 id: node.link_article.teaser
 targetEntityType: node
 bundle: link_article
 mode: teaser
 content:
+  field_article_months:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: true
+    third_party_settings: {  }
+    weight: 8
+    region: content
   field_article_type:
     type: entity_reference_label
     label: hidden
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     weight: 3
+    region: content
+  field_class:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: true
+    third_party_settings: {  }
+    weight: 7
     region: content
   field_description:
     type: basic_string
@@ -76,20 +92,44 @@ content:
     weight: 1
     region: content
   field_list_media_anonymous:
-    type: responsive_image
+    type: image
     label: hidden
     settings:
-      responsive_image_style: list_view
       image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 2
     region: content
+  field_location:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: true
+    third_party_settings: {  }
+    weight: 9
+    region: content
+  field_season:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: true
+    third_party_settings: {  }
+    weight: 10
+    region: content
+  field_subject:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: true
+    third_party_settings: {  }
+    weight: 6
+    region: content
 hidden:
   body: true
-  field_article_months: true
-  field_class: true
-  field_location: true
-  field_season: true
-  field_subject: true
   langcode: true
   links: true
