--- a/config/sync/field.storage.node.field_article_months.yml
+++ b/config/sync/field.storage.node.field_article_months.yml
@@ -3,8 +3,12 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
     - taxonomy
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: node.field_article_months
 field_name: field_article_months
 entity_type: node
