--- a/config/sync/core.entity_view_display.node.link_article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.link_article.teaser.yml
@@ -27,13 +27,12 @@ bundle: link_article
 mode: teaser
 content:
   field_article_months:
-    type: entity_reference_entity_view
+    type: entity_reference_label
     label: hidden
     settings:
-      view_mode: default
       link: true
     third_party_settings: {  }
-    weight: 8
+    weight: 7
     region: content
   field_article_type:
     type: entity_reference_label
@@ -44,13 +43,12 @@ content:
     weight: 3
     region: content
   field_class:
-    type: entity_reference_entity_view
+    type: entity_reference_label
     label: hidden
     settings:
-      view_mode: default
       link: true
     third_party_settings: {  }
-    weight: 7
+    weight: 6
     region: content
   field_description:
     type: basic_string
@@ -103,31 +101,28 @@ content:
     weight: 2
     region: content
   field_location:
-    type: entity_reference_entity_view
+    type: entity_reference_label
     label: hidden
     settings:
-      view_mode: default
       link: true
     third_party_settings: {  }
-    weight: 9
+    weight: 8
     region: content
   field_season:
-    type: entity_reference_entity_view
+    type: entity_reference_label
     label: hidden
     settings:
-      view_mode: default
       link: true
     third_party_settings: {  }
     weight: 10
     region: content
   field_subject:
-    type: entity_reference_entity_view
+    type: entity_reference_label
     label: hidden
     settings:
-      view_mode: default
       link: true
     third_party_settings: {  }
-    weight: 6
+    weight: 9
     region: content
 hidden:
   body: true
