SIS2-464: Enable external facet on search page

--- a/config/sync/entity_overview.overview.node_article.yml
+++ b/config/sync/entity_overview.overview.node_article.yml
@@ -15,6 +15,7 @@ entity_bundles:
     - link_article
 fields:
   owner: entity_autocomplete
+  external: checkboxes
   field_article_type: checkboxes
   field_class: checkboxes
   field_location: checkboxes
