--- a/config/sync/entity_overview_search.settings.yml
+++ b/config/sync/entity_overview_search.settings.yml
@@ -2,7 +2,7 @@ overview: search
 filter:
   overview: search
   fields:
-    text: ''
+    external: {  }
     field_article_type: {  }
     field_class: {  }
     field_location: {  }
@@ -10,7 +10,7 @@ filter:
     field_subject: {  }
   facets:
     - sort
-    - text
+    - external
     - field_article_type
     - field_class
     - field_location
