--- a/config/sync/field.field.node.article.field_colophon_author.yml
+++ b/config/sync/field.field.node.article.field_colophon_author.yml
@@ -9,7 +9,7 @@ id: node.article.field_colophon_author
 field_name: field_colophon_author
 entity_type: node
 bundle: article
-label: 'Forfatter'
+label: Forfatter
 description: ''
 required: false
 translatable: false
