--- a/config/sync/field.storage.block_content.field_video_media.yml
+++ b/config/sync/field.storage.block_content.field_video_media.yml
@@ -4,7 +4,11 @@ status: true
 dependencies:
   module:
     - block_content
+    - field_permissions
     - media
+third_party_settings:
+  field_permissions:
+    permission_type: public
 _core:
   default_config_hash: E7W1jMMDTJspsPDZEaV8R4a46R3F7SpB-Oulvur3nfo
 id: block_content.field_video_media
