--- a/config/sync/core.entity_form_display.profile.organization.default.yml
+++ b/config/sync/core.entity_form_display.profile.organization.default.yml
@@ -36,7 +36,7 @@ third_party_settings:
         - field_organization_email
         - field_organization_website
         - field_organization_phone
-      label: Kontaktinformation
+      label: 'Yderligere kontaktinformation'
       region: content
       parent_name: ''
       weight: 1
