--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -10,10 +10,46 @@ dependencies:
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
+    - field_group
     - image
     - path
     - text
     - user
+third_party_settings:
+  field_group:
+    group_passoword:
+      children:
+        - account
+      label: Adgangskode
+      region: content
+      parent_name: ''
+      weight: 0
+      format_type: fieldset
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        description: ''
+        required_fields: true
+    group_account_details:
+      children:
+        - field_summary
+        - field_email
+        - field_full_name
+        - field_description
+        - user_picture
+        - path
+      label: 'Konto detaljer'
+      region: content
+      parent_name: ''
+      weight: 1
+      format_type: fieldset
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        description: ''
+        required_fields: true
 _core:
   default_config_hash: Tii0Ca3OF32lLDp9WN3el1Q1cy2MFIxUUCraMzIZxRA
 id: user.user.default
@@ -22,7 +58,7 @@ bundle: user
 mode: default
 content:
   account:
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -31,7 +67,7 @@ content:
     region: content
   field_description:
     type: text_textarea
-    weight: 5
+    weight: 8
     region: content
     settings:
       rows: 5
@@ -39,7 +75,7 @@ content:
     third_party_settings: {  }
   field_email:
     type: email_default
-    weight: 7
+    weight: 6
     region: content
     settings:
       placeholder: ''
@@ -47,7 +83,7 @@ content:
     third_party_settings: {  }
   field_full_name:
     type: string_textfield
-    weight: 8
+    weight: 7
     region: content
     settings:
       size: 60
@@ -55,31 +91,21 @@ content:
     third_party_settings: {  }
   field_summary:
     type: string_textarea
-    weight: 6
+    weight: 5
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-  language:
-    weight: 2
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   path:
     type: path
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  timezone:
-    weight: 3
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   user_picture:
     type: image_image
-    weight: 1
+    weight: 9
     region: content
     settings:
       progress_indicator: throbber
@@ -87,4 +113,6 @@ content:
     third_party_settings: {  }
 hidden:
   langcode: true
+  language: true
   organization_profiles: true
+  timezone: true
