--- a/config/sync/core.entity_form_display.user.user.register.yml
+++ b/config/sync/core.entity_form_display.user.user.register.yml
@@ -22,26 +22,27 @@ bundle: user
 mode: register
 content:
   account:
-    weight: -10
+    weight: 0
     region: content
+    settings: {  }
+    third_party_settings: {  }
   contact:
     weight: 5
     region: content
   language:
-    weight: 0
-    region: content
-  path:
-    type: path
-    weight: 30
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
-  timezone:
-    weight: 6
+  path:
+    type: path
+    weight: 3
     region: content
+    settings: {  }
+    third_party_settings: {  }
   user_picture:
     type: image_image
-    weight: -1
+    weight: 1
     region: content
     settings:
       progress_indicator: throbber
@@ -54,3 +55,4 @@ hidden:
   field_summary: true
   langcode: true
   organization_profiles: true
+  timezone: true
