--- a/config/sync/field.field.node.link_article.body.yml
+++ b/config/sync/field.field.node.link_article.body.yml
@@ -6,18 +6,22 @@ dependencies:
     - field.storage.node.body
     - node.type.link_article
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    allowed_formats: {  }
 id: node.link_article.body
 field_name: body
 entity_type: node
 bundle: link_article
-label: Body
+label: Brødtekst
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  display_summary: true
+  display_summary: false
   required_summary: false
 field_type: text_with_summary
