--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -8,6 +8,7 @@ dependencies:
     - media.type.image
     - node.type.article
     - node.type.dot_on_map
+    - node.type.link_article
     - workflows.workflow.editorial
   module:
     - content_moderation
@@ -34,6 +35,7 @@ permissions:
   - 'create field_list_media_anonymous'
   - 'create field_top_image'
   - 'create image media'
+  - 'create link_article content'
   - 'delete own image media'
   - 'edit field_top_image'
   - 'edit own field_article_image_anonymous'
