--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -18,6 +18,7 @@ dependencies:
     - node.type.article
     - node.type.blog_post
     - node.type.dot_on_map
+    - node.type.link_article
     - node.type.news
     - node.type.page
     - taxonomy.vocabulary.article_categories
@@ -128,6 +129,7 @@ permissions:
   - 'create field_list_media'
   - 'create field_top_image'
   - 'create image media'
+  - 'create link_article content'
   - 'create media'
   - 'create news content'
   - 'create organization profile'
@@ -157,6 +159,7 @@ permissions:
   - 'delete any document media'
   - 'delete any dot_on_map content'
   - 'delete any image media'
+  - 'delete any link_article content'
   - 'delete any media'
   - 'delete any news content'
   - 'delete any organization profile'
@@ -170,6 +173,7 @@ permissions:
   - 'delete content translations'
   - 'delete dot_on_map revisions'
   - 'delete files'
+  - 'delete link_article revisions'
   - 'delete media'
   - 'delete news revisions'
   - 'delete own almanac content'
@@ -179,6 +183,7 @@ permissions:
   - 'delete own document media'
   - 'delete own dot_on_map content'
   - 'delete own image media'
+  - 'delete own link_article content'
   - 'delete own news content'
   - 'delete own organization profile'
   - 'delete own page content'
@@ -207,6 +212,7 @@ permissions:
   - 'edit any document media'
   - 'edit any dot_on_map content'
   - 'edit any image media'
+  - 'edit any link_article content'
   - 'edit any news content'
   - 'edit any page content'
   - 'edit any remote_video media'
@@ -240,6 +246,7 @@ permissions:
   - 'edit own field_list_media'
   - 'edit own field_top_image'
   - 'edit own image media'
+  - 'edit own link_article content'
   - 'edit own news content'
   - 'edit own page content'
   - 'edit own remote_video media'
@@ -266,6 +273,7 @@ permissions:
   - 'revert article revisions'
   - 'revert blog_post revisions'
   - 'revert dot_on_map revisions'
+  - 'revert link_article revisions'
   - 'revert news revisions'
   - 'revert page revisions'
   - 'select account cancellation method'
@@ -314,6 +322,7 @@ permissions:
   - 'view field_list_media'
   - 'view field_top_image'
   - 'view latest version'
+  - 'view link_article revisions'
   - 'view news revisions'
   - 'view own field_article_image'
   - 'view own field_external_link'
