SIS2-644: Hide fields

--- a/config/sync/core.entity_form_display.user.user.register.yml
+++ b/config/sync/core.entity_form_display.user.user.register.yml
@@ -12,7 +12,6 @@ dependencies:
     - image.style.thumbnail
   module:
     - image
-    - path
     - user
 _core:
   default_config_hash: Tii0Ca3OF32lLDp9WN3el1Q1cy2MFIxUUCraMzIZxRA
@@ -34,12 +33,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 3
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   user_picture:
     type: image_image
     weight: 1
@@ -55,4 +48,5 @@ hidden:
   field_summary: true
   langcode: true
   organization_profiles: true
+  path: true
   timezone: true
