--- a/config/sync/core.entity_form_display.profile.organization.default.yml
+++ b/config/sync/core.entity_form_display.profile.organization.default.yml
@@ -25,7 +25,6 @@ dependencies:
     - focal_point
     - image
     - link
-    - path
     - telephone
     - text
 third_party_settings:
@@ -101,7 +100,7 @@ content:
     third_party_settings: {  }
   field_organization_overview:
     type: overview_filter_widget
-    weight: 4
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -122,13 +121,13 @@ content:
     third_party_settings: {  }
   field_section_bg_graphics:
     type: options_select
-    weight: 6
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_section_bg_graphics_pos:
     type: options_select
-    weight: 7
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -157,11 +156,6 @@ content:
       preview_link: false
       offsets: '50,50'
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 5
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   is_default: true
+  path: true
