--- a/config/sync/field.field.node.article.field_equipment.yml
+++ b/config/sync/field.field.node.article.field_equipment.yml
@@ -18,7 +18,7 @@ field_name: field_equipment
 entity_type: node
 bundle: article
 label: Grej
-description: ''
+description: 'Skriv en prikpunkts-liste over grej.'
 required: false
 translatable: false
 default_value: {  }
