--- a/config/sync/field.field.node.article.field_list_media_anonymous.yml
+++ b/config/sync/field.field.node.article.field_list_media_anonymous.yml
@@ -12,7 +12,7 @@ field_name: field_list_media_anonymous
 entity_type: node
 bundle: article
 label: 'Liste media'
-description: 'Et lille billede, der vises på interne søgeresultater og andre lister. Det kan være det samme billede som artiklens billede.'
+description: 'Vælg et foto, der vises på interne søgeresultater og andre lister. Det kan være det samme billede som artiklens billede.'
 required: true
 translatable: false
 default_value: {  }
