--- a/config/sync/field.field.node.article.field_teaching_goals.yml
+++ b/config/sync/field.field.node.article.field_teaching_goals.yml
@@ -18,7 +18,7 @@ field_name: field_teaching_goals
 entity_type: node
 bundle: article
 label: Undervisningsmål
-description: ''
+description: 'Kun nødvendig ved undervisningsforløb: Skriv gerne de mest relevante undervisningsmål ind her, så kort som muligt. Du kan også linke.'
 required: false
 translatable: false
 default_value: {  }
