--- a/config/sync/field.field.node.page.body.yml
+++ b/config/sync/field.field.node.page.body.yml
@@ -17,7 +17,7 @@ id: node.page.body
 field_name: body
 entity_type: node
 bundle: page
-label: Brødtekst
+label: 'Skriv hovedteksten til din artikel her.'
 description: ''
 required: false
 translatable: true
