--- a/config/sync/core.entity_view_display.block_content.slideshow.default.yml
+++ b/config/sync/core.entity_view_display.block_content.slideshow.default.yml
@@ -27,7 +27,7 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: default
+      view_mode: full_width_16_9
       link: false
     third_party_settings: {  }
     weight: 2
