--- a/config/sync/core.entity_view_display.media.image.slideshow.yml
+++ b/config/sync/core.entity_view_display.media.image.slideshow.yml
@@ -6,11 +6,11 @@ dependencies:
     - core.entity_view_mode.media.slideshow
     - field.field.media.image.field_media_category
     - field.field.media.image.field_media_image
-    - image.style.simple_slideshow
     - media.type.image
+    - responsive_image.styles.1_column
   module:
-    - image
     - layout_builder
+    - responsive_image
 third_party_settings:
   layout_builder:
     enabled: false
@@ -23,13 +23,11 @@ bundle: image
 mode: slideshow
 content:
   field_media_image:
-    type: image
+    type: responsive_image
     label: hidden
     settings:
+      responsive_image_style: 1_column
       image_link: ''
-      image_style: simple_slideshow
-      image_loading:
-        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
