SIS2-651: Reintroduce text search

--- a/config/sync/entity_overview_search.settings.yml
+++ b/config/sync/entity_overview_search.settings.yml
@@ -2,6 +2,7 @@ overview: search
 filter:
   overview: search
   fields:
+    text: ''
     external: {  }
     field_article_type: {  }
     field_class: {  }
@@ -10,6 +11,7 @@ filter:
     field_subject: {  }
   facets:
     - sort
+    - text
     - external
     - field_article_type
     - field_class
