--- a/config/sync/entity_overview.overview.search.yml
+++ b/config/sync/entity_overview.overview.search.yml
@@ -22,6 +22,7 @@ entity_bundles:
   profile:
     - organization
 fields:
+  text: search
   external: checkboxes
   field_article_type: checkboxes
   field_class: checkboxes
