SIS2-651: Also reintroduce text on articles

--- a/config/sync/entity_overview.overview.node_article.yml
+++ b/config/sync/entity_overview.overview.node_article.yml
@@ -14,6 +14,7 @@ entity_bundles:
     - article
     - link_article
 fields:
+  text: search
   owner: entity_autocomplete
   external: checkboxes
   field_article_type: checkboxes
