--- a/config/sync/core.entity_view_display.node.dot_on_map.default.yml
+++ b/config/sync/core.entity_view_display.node.dot_on_map.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.dot_on_map.body
+    - field.field.node.dot_on_map.field_article_type
     - field.field.node.dot_on_map.field_class
     - field.field.node.dot_on_map.field_contact_information
     - field.field.node.dot_on_map.field_files
@@ -45,6 +46,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_article_type:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 111
     region: content
   field_class:
     type: entity_reference_label
