--- a/config/sync/entity_overview.overview.search.yml
+++ b/config/sync/entity_overview.overview.search.yml
@@ -5,7 +5,9 @@ dependencies:
   config:
     - node.type.article
     - node.type.blog_post
+    - node.type.dot_on_map
     - node.type.link_article
+    - node.type.news
     - node.type.page
     - profile.type.organization
   module:
@@ -17,7 +19,9 @@ entity_bundles:
   node:
     - article
     - blog_post
+    - dot_on_map
     - link_article
+    - news
     - page
   profile:
     - organization
