--- a/config/sync/core.entity_view_display.node.news.search_result.yml
+++ b/config/sync/core.entity_view_display.node.news.search_result.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.news.body
     - field.field.node.news.content_hierarchy
     - field.field.node.news.field_article_categories
+    - field.field.node.news.field_article_type
     - field.field.node.news.field_description
     - field.field.node.news.field_factboxes
     - field.field.node.news.field_graphics
@@ -59,6 +60,7 @@ hidden:
   content_hierarchy: true
   content_moderation_control: true
   field_article_categories: true
+  field_article_type: true
   field_factboxes: true
   field_graphics: true
   field_header: true
