--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.news.body
     - field.field.node.news.content_hierarchy
     - field.field.node.news.field_article_categories
+    - field.field.node.news.field_article_type
     - field.field.node.news.field_description
     - field.field.node.news.field_factboxes
     - field.field.node.news.field_graphics
@@ -38,7 +39,7 @@ third_party_settings:
       label: 'Page header'
       region: hidden
       parent_name: ''
-      weight: 22
+      weight: 23
       format_type: fieldset
       format_settings:
         classes: ''
@@ -303,6 +304,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_article_categories: true
+  field_article_type: true
   field_graphics: true
   field_header: true
   field_hide_title: true
