SIS2-627: Set default values for field_article_type on News and Dot on Map

--- a/config/sync/field.field.node.news.field_article_type.yml
+++ b/config/sync/field.field.node.news.field_article_type.yml
@@ -6,6 +6,8 @@ dependencies:
     - field.storage.node.field_article_type
     - node.type.news
     - taxonomy.vocabulary.article_types
+  content:
+    - 'taxonomy_term:article_types:51592f6c-f3e7-43d0-994f-da8693987ce1'
 id: node.news.field_article_type
 field_name: field_article_type
 entity_type: node
@@ -14,7 +16,9 @@ label: Type
 description: ''
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    target_uuid: 51592f6c-f3e7-43d0-994f-da8693987ce1
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
