--- a/config/sync/core.entity_view_display.media.image.full.yml
+++ b/config/sync/core.entity_view_display.media.image.full.yml
@@ -1,20 +1,26 @@
-uuid: 32080093-f8b7-45b6-9395-0defaa71d393
+uuid: 191f3d2c-54d6-429a-bc2f-706194c5e0e9
 langcode: da
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.full
     - field.field.media.image.field_media_category
     - field.field.media.image.field_media_image
     - media.type.image
     - responsive_image.styles.full_width_flex_height
   module:
+    - layout_builder
     - responsive_image
+third_party_settings:
+  layout_builder:
+    enabled: false
+    allow_custom: false
 _core:
   default_config_hash: d69bsUoZgPMKBwQa1UW1jIvszVcwhtCYcoMCsh75S4s
-id: media.image.default
+id: media.image.full
 targetEntityType: media
 bundle: image
-mode: default
+mode: full
 content:
   field_media_image:
     type: responsive_image
