SIS2-635: Adjust permissions for field_summary and field_description on Profiles, based on roles

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -41,6 +41,7 @@ permissions:
   - 'view field_external_link_logo'
   - 'view field_list_media'
   - 'view field_list_media_anonymous'
+  - 'view field_summary'
   - 'view field_top_image'
   - 'view field_top_image_anonymous'
   - 'view media'
@@ -51,5 +52,6 @@ permissions:
   - 'view own field_colophon'
   - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
+  - 'view own field_summary'
   - 'view own field_top_image'
   - 'view own field_top_image_anonymous'
