--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -127,6 +127,7 @@ permissions:
   - 'create field_external_link_logo'
   - 'create field_header'
   - 'create field_list_media'
+  - 'create field_summary'
   - 'create field_top_image'
   - 'create image media'
   - 'create link_article content'
@@ -230,6 +231,7 @@ permissions:
   - 'edit field_external_link_logo'
   - 'edit field_header'
   - 'edit field_list_media'
+  - 'edit field_summary'
   - 'edit field_top_image'
   - 'edit own almanac content'
   - 'edit own article content'
@@ -244,6 +246,7 @@ permissions:
   - 'edit own field_external_link_logo'
   - 'edit own field_header'
   - 'edit own field_list_media'
+  - 'edit own field_summary'
   - 'edit own field_top_image'
   - 'edit own image media'
   - 'edit own link_article content'
