--- a/config/sync/user.role.writer.yml
+++ b/config/sync/user.role.writer.yml
@@ -28,6 +28,7 @@ permissions:
   - 'create document media'
   - 'create dot_on_map content'
   - 'create field_list_media_anonymous'
+  - 'create field_summary'
   - 'create image media'
   - 'create link_article content'
   - 'create remote_video media'
@@ -43,6 +44,7 @@ permissions:
   - 'edit own blog_post content'
   - 'edit own document media'
   - 'edit own field_list_media_anonymous'
+  - 'edit own field_summary'
   - 'edit own image media'
   - 'edit own link_article content'
   - 'edit own remote_video media'
