--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -56,6 +56,7 @@ permissions:
   - 'view field_external_link_logo'
   - 'view field_list_media'
   - 'view field_list_media_anonymous'
+  - 'view field_summary'
   - 'view field_top_image'
   - 'view field_top_image_anonymous'
   - 'view media'
@@ -66,6 +67,7 @@ permissions:
   - 'view own field_colophon'
   - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
+  - 'view own field_summary'
   - 'view own field_top_image'
   - 'view own field_top_image_anonymous'
   - 'view own unpublished media'
