--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -116,6 +116,7 @@ permissions:
   - 'create field_external_link'
   - 'create field_external_link_logo'
   - 'create field_list_media'
+  - 'create field_summary'
   - 'create field_top_image'
   - 'create image media'
   - 'create link_article content'
@@ -218,6 +219,7 @@ permissions:
   - 'edit field_external_link'
   - 'edit field_external_link_logo'
   - 'edit field_list_media'
+  - 'edit field_summary'
   - 'edit field_top_image'
   - 'edit own almanac content'
   - 'edit own article content'
@@ -231,6 +233,7 @@ permissions:
   - 'edit own field_external_link'
   - 'edit own field_external_link_logo'
   - 'edit own field_list_media'
+  - 'edit own field_summary'
   - 'edit own field_top_image'
   - 'edit own image media'
   - 'edit own link_article content'
