SIS2-464: Added weight to article page share atoms

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/sis_articles.atoms.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/sis_articles.atoms.yml
@@ -30,6 +30,7 @@ atoms:
     default:
       da: 'Vil du have en prik på kortet?'
       en: 'Vil du have en prik på kortet?'
+    weight: 1
 
   share-page-first-option-help-text:
     type: textfield
@@ -38,6 +39,7 @@ atoms:
     default:
       da: 'For mennesker og steder, som kan hjælpe med udeskole lokalt, fx naturskoler, jægere, museer eller andet.'
       en: 'For mennesker og steder, som kan hjælpe med udeskole lokalt, fx naturskoler, jægere, museer eller andet.'
+    weight: 2
 
   share-page-second-option-title:
     type: textfield
@@ -46,6 +48,7 @@ atoms:
     default:
       da: 'Vil du dele en aktivitet?'
       en: 'Vil du dele en aktivitet?'
+    weight: 3
 
   share-page-second-option-help-text:
     type: textfield
@@ -54,38 +57,7 @@ atoms:
     default:
       da: 'En aktivitet er skrevet for børn – og beskriver kort en udeaktivitet - fx snit en pilefløjte.'
       en: 'En aktivitet er skrevet for børn – og beskriver kort en udeaktivitet - fx snit en pilefløjte.'
-
-  share-page-third-option-title:
-    type: textfield
-    title: Del side - tredje valg - titel
-    category: Del side
-    default:
-      da: 'Vil du lægge et undervisningsforløb på kortet?'
-      en: 'Vil du lægge et undervisningsforløb på kortet?'
-
-  share-page-third-option-help-text:
-    type: textfield
-    title: Del side - tredje valg - hjælpetekst
-    category: Del side
-    default:
-      da: 'Et undervisningsforløb er skrevet for lærere og knyttet til fag, klasse og faglige mål.'
-      en: 'Et undervisningsforløb er skrevet for lærere og knyttet til fag, klasse og faglige mål.'
-
-  share-page-fourth-option-title:
-    type: textfield
-    title: Del side - fjerde valg - titel
-    category: Del side
-    default:
-      da: 'Vil du oprette en link artikel til indhold fra en anden hjemmeside?'
-      en: 'Vil du oprette en link artikel til indhold fra en anden hjemmeside?'
-
-  share-page-fourth-option-help-text:
-    type: textfield
-    title: Del side - fjerde valg - hjælpetekst
-    category: Del side
-    default:
-      da: 'En link artikel er indhold fra en anden hjemmeside som du ønsker at vise i listen over aktiviteter etc.'
-      en: 'En link artikel er indhold fra en anden hjemmeside som du ønsker at vise i listen over aktiviteter etc.'
+    weight: 4
 
   share-page-second-option-title-green-orgs:
     type: textfield
@@ -94,6 +66,7 @@ atoms:
     default:
       da: 'Vil du oprette en artikel?'
       en: 'Vil du oprette en artikel?'
+    weight: 5
 
   share-page-second-option-help-text-green-orgs:
     type: textfield
@@ -102,3 +75,40 @@ atoms:
     default:
       da: 'En aktivitet, et undervisningsforløb, eller en anden artikeltype, der vises i interne søgeresultater og på din visitkortside'
       en: 'En aktivitet, et undervisningsforløb, eller en anden artikeltype, der vises i interne søgeresultater og på din visitkortside'
+    weight: 6
+
+  share-page-third-option-title:
+    type: textfield
+    title: Del side - tredje valg - titel
+    category: Del side
+    default:
+      da: 'Vil du lægge et undervisningsforløb på kortet?'
+      en: 'Vil du lægge et undervisningsforløb på kortet?'
+    weight: 7
+
+  share-page-third-option-help-text:
+    type: textfield
+    title: Del side - tredje valg - hjælpetekst
+    category: Del side
+    default:
+      da: 'Et undervisningsforløb er skrevet for lærere og knyttet til fag, klasse og faglige mål.'
+      en: 'Et undervisningsforløb er skrevet for lærere og knyttet til fag, klasse og faglige mål.'
+    weight: 8
+
+  share-page-fourth-option-title:
+    type: textfield
+    title: Del side - fjerde valg - titel
+    category: Del side
+    default:
+      da: 'Vil du oprette en linkartikel til indhold fra en anden hjemmeside?'
+      en: 'Vil du oprette en linkartikel til indhold fra en anden hjemmeside?'
+    weight: 9
+
+  share-page-fourth-option-help-text:
+    type: textfield
+    title: Del side - fjerde valg - hjælpetekst
+    category: Del side
+    default:
+      da: 'En linkartikel er indhold fra en anden hjemmeside som du ønsker at vise i listen over aktiviteter etc.'
+      en: 'En linkartikel er indhold fra en anden hjemmeside som du ønsker at vise i listen over aktiviteter etc.'
+    weight: 10
