SIS2-649: Added article title placeholder

--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -872,7 +872,7 @@ content:
     region: content
     settings:
       size: 60
-      placeholder: ''
+      placeholder: 'Skriv din titel her'
     third_party_settings: {  }
   translation:
     weight: 9
