SIS2-681: Changed mail system defaults to swiftmailer and swiftmailer sender to smtp mailer

--- a/config/sync/mailsystem.settings.yml
+++ b/config/sync/mailsystem.settings.yml
@@ -3,10 +3,10 @@ _core:
 langcode: da
 theme: sis
 defaults:
-  sender: SMTPMailSystem
-  formatter: SMTPMailSystem
+  sender: swiftmailer
+  formatter: swiftmailer
 modules:
   swiftmailer:
     none:
-      sender: swiftmailer
+      sender: SMTPMailSystem
       formatter: swiftmailer
