--- a/config/sync/core.entity_view_display.node.dot_on_map.list.yml
+++ b/config/sync/core.entity_view_display.node.dot_on_map.list.yml
@@ -1,9 +1,9 @@
-uuid: 80c8d8a4-cb60-4e55-b9f7-717d8ca5096a
+uuid: 94998bc2-ce61-40d1-bb05-a5f46bddbbb9
 langcode: da
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.list
     - field.field.node.dot_on_map.body
     - field.field.node.dot_on_map.field_article_type
     - field.field.node.dot_on_map.field_class
@@ -26,19 +26,23 @@ dependencies:
     - node.type.dot_on_map
     - responsive_image.styles.list_view
   module:
+    - layout_builder
     - responsive_image
     - text
     - user
-id: node.dot_on_map.teaser
+third_party_settings:
+  layout_builder:
+    enabled: false
+    allow_custom: false
+id: node.dot_on_map.list
 targetEntityType: node
 bundle: dot_on_map
-mode: teaser
+mode: list
 content:
   body:
-    type: text_summary_or_trimmed
+    type: text_default
     label: hidden
-    settings:
-      trim_length: 600
+    settings: {  }
     third_party_settings: {  }
     weight: 2
     region: content
@@ -46,6 +50,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_contact_data:
+    type: basic_string
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 106
     region: content
   field_list_media:
     type: entity_reference_entity_view
