SIS2-681: Changed mail system and swiftmailer settings + article approved workbench template

--- a/config/sync/mailsystem.settings.yml
+++ b/config/sync/mailsystem.settings.yml
@@ -3,7 +3,7 @@ _core:
 langcode: da
 theme: sis
 defaults:
-  sender: swiftmailer
+  sender: SMTPMailSystem
   formatter: swiftmailer
 modules:
   swiftmailer:
