--- a/config/sync/swiftmailer.message.yml
+++ b/config/sync/swiftmailer.message.yml
@@ -1,7 +1,4 @@
-_core:
-  default_config_hash: VMWxVURttskghCbo5AuwZeaD2NJquuMGrOMJqG1YZhE
-langcode: da
 content_type: text/html
-text_format: ''
-generate_plain: true
+text_format: plain_text
+generate_plain: false
 character_set: UTF-8
