--- a/config/sync/field.field.node.link_article.field_list_media_anonymous.yml
+++ b/config/sync/field.field.node.link_article.field_list_media_anonymous.yml
@@ -19,7 +19,7 @@ field_name: field_list_media_anonymous
 entity_type: node
 bundle: link_article
 label: 'Liste media'
-description: 'Et lille billede, der vises på interne søgeresultater og andre lister. Det kan være det samme billede som artiklens billede.'
+description: 'Vælg et foto, der vises på interne søgeresultater og andre lister. Det kan være det samme billede som artiklens billede.'
 required: true
 translatable: true
 default_value: {  }
