--- a/config/sync/field.field.node.article.body.yml
+++ b/config/sync/field.field.node.article.body.yml
@@ -19,7 +19,7 @@ id: node.article.body
 field_name: body
 entity_type: node
 bundle: article
-label: 'Skriv hovedteksten til din artikel her.'
+label: 'Skriv hovedteksten til din artikel her'
 description: ''
 required: false
 translatable: true
